# Krakked

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  bench_ohlc_zip.py  benchmark_dataframe_instantiation.py  compose.dev.yaml  compose.yaml  krakked_fixes.patch  mypy_report.txt  phase2.md  phase3.md  phase4.md  phase5.md  phase6  phase7.md  portfolio.db  pyproject.toml  pyrightconfig.json  test_style.py
.github/workflows/: ci.yml  release.yml
.jules/: aegis.md  aura.md  bolt.md  scribe.md
.tmp-codex/: active-cockpit-after-fix.har  active-cockpit.har
.tmp-codex/pw-runner/: package-lock.json  package.json
config_examples/: config.container.yaml  config.live.yaml  config.paper.yaml  config.yaml
docs/: CONFIG.md  README.md  backup-restore.md  contract.md  decision-loop-proof-plan.md  deployment-preflight-checklist.md  deployment-proof.md  distribution.md  docker.md  market-regime-overlay-plan.md  ml-cross-window-validation.md  ml-experiment-log.md  money-safety-proof-plan.md  onboarding.md  operator-trust-and-trading-next-steps.md  phase4-progress.md  phase6.md  product-roadmap.md  regime-diverse-evidence-plan.md  releases.md  replay-experiment-log.md  simulation.md  strategy-source-decision.md  unraid.md  upgrades.md
docs/phases/: contract.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md
docs/soak-reports/: 2026-06-19-paper-soak.md  2026-06-20-paper-validation.md  2026-06-22-decision-loop-replay-gate.md  2026-06-23-decision-soak-rc10-forward.md  2026-06-23-rc11-paper-flatten-confirmation.md
docs/strategy-signal-reports/: 2026-06-23-trend-core-signal-quality.md
kraken_trader/: config.py  connection.py  nonce.py  secrets.py
reports/ml/: ai-regression-1h.json
scripts/: bench_ingest.py  run_strategy_once.py  unraid_bootstrap.sh  unraid_compose_persistence.sh  unraid_deployment_proof.sh  unraid_image_upgrade_rollback_drill.sh
src/: appdirs.py  yaml.py
src/fastapi/: __init__.py  responses.py
src/kraken_bot/: __init__.py  accounts.py  bootstrap.py  cli.py  config.py  config_loader.py  config_models.py  logging_config.py  main.py  metrics.py  password_store.py  safety.py  secrets.py
src/krakked/: accounts.py  alerts.py  bootstrap.py  cli.py  config.py  config_loader.py  config_models.py  credentials.py  logging_config.py  main.py  market_regime.py  metrics.py  risk_signal.py  runtime_provenance.py  safety.py  secrets.py  (+1 more)
tests/: benchmark_df_conversion.py  benchmark_infer_regime.py  benchmark_ohlc_conversion.py  benchmark_ohlc_conversion_strategies.py  benchmark_ohlc_store.py  benchmark_ohlc_store_repro.py  benchmark_ohlc_strategies.py  benchmark_portfolio_cache.py  benchmark_quantizer.py  benchmark_rounding.py  benchmark_ticker_optimization.py  benchmark_userref.py  conftest.py  runtime_mocks.py  test_action_diagnostics.py  test_admin_force_resolve.py  test_alerts.py  test_api.py  test_api_extensions.py  test_api_signing.py  test_backtest_runner.py  test_bootstrap.py  test_cli.py  test_cli_db_tools.py  test_cli_schema_helpers.py  test_config.py  test_config_defaults.py  test_config_env.py  test_config_int_validation.py  test_config_runtime_overrides.py  test_config_safety.py  test_credentials_logging.py  test_defensive_baseline.py  test_evidence_windows.py  test_execution_adapter.py  test_execution_adapters.py  test_execution_admin_cli.py  test_execution_guardrails.py  test_execution_kill_switch.py  test_execution_oms.py  (+68 more)
ui/: README.md  dashboard.css  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  tui_dash_temp  tui_dashboard.py  vitest.config.ts
(+248 files in other folders)
