[tool.poetry]
name = "kraken-trader"
version = "0.1.0"
description = "A Kraken trading bot."
authors = ["Jules <agent@morpheus.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
cryptography = "^42.0.5"
pyyaml = "^6.0.1"
appdirs = "^1.4.4"
pandas = "^2.3.3"
pyarrow = "^22.0.0"
websockets = "^15.0.1"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
textual = {version = ">=0.57,<1.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
tui = ["textual"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src", "typings"]
exclude = ["build", "dist"]

[tool.poetry.scripts]
krakked = "kraken_bot.cli:main"
