[project]
name = "kraken-trader"
version = "0.1.0"
description = "A Kraken trading bot."
authors = [{ name = "Rob" }]
requires-python = ">=3.10,<4.0"

dependencies = [
  "requests>=2.31.0,<3.0.0",
  "cryptography>=42.0.5,<43.0.0",
  "pyyaml>=6.0.1,<7.0.0",
  "appdirs>=1.4.4,<2.0.0",
  "pandas>=2.3.3,<3.0.0",
  "pyarrow>=22.0.0,<23.0.0",
  "numpy>=1.26.0,<2.0.0",
  "websockets>=15.0.1,<16.0.0",
  "fastapi>=0.115.0,<0.116.0",
  "pydantic>=2.7.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
]

[project.optional-dependencies]
tui = ["textual>=0.57,<3.0"]

[project.scripts]
krakked = "kraken_bot.cli:main"

[tool.poetry]
packages = [
  { include = "kraken_bot", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.18.2"
httpx = { version = ">=0.28.1,<0.29.0" }
pyright = ">=1.1.380,<2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src",
]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src", "typings"]
exclude = ["build", "dist"]
