[project]
name = "kraken-trader"
version = "0.1.0"
description = "A Kraken trading bot."
authors = [{ name = "Rob" }]
requires-python = ">=3.11,<4.0"

dependencies = [
  "requests>=2.31.0,<3.0.0",
  "cryptography>=42.0.5,<43.0.0",
  "pyyaml>=6.0.1,<7.0.0",
  "appdirs>=1.4.4,<2.0.0",
  "pandas>=2.3.3,<3.0.0",
  "pyarrow>=22.0.0,<23.0.0",
  "numpy>=1.26.0,<2.0.0",
  "scikit-learn>=1.3.0,<2.0.0",
  "websockets>=15.0.1,<16.0.0",
  "fastapi>=0.115.0,<0.116.0",
  "pydantic>=2.7.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
]

[project.optional-dependencies]
tui = ["textual>=0.57,<3.0"]

[project.scripts]
krakked = "kraken_bot.cli:main"

[tool.poetry]
packages = [
  { include = "kraken_bot", from = "src" }
]

[tool.poetry.scripts]
krakked = "kraken_bot.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.18.2"
httpx = { version = ">=0.28.1,<0.29.0" }
pyright = ">=1.1.380,<2.0"
flake8 = "^7.3.0"
black = "^24.8.0"
isort = "^5.13.0"
pre-commit = "^4.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src",
]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src", "typings"]
exclude = ["build", "dist"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = "src/|tests/"

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.flake8]
max-line-length = 88
extend-ignore = [
  "E203",
  "E302",
  "E701",
  "E722",
  "E501",
  "W503",
]
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "build",
  "dist",
  "typings",
  "ui/node_modules",
]
